force-app/main/default/objects/OCX_Survey_Wave_Result__c/OCX_Survey_Wave_Result__c.object-meta.xml
<CustomObject>
    <description>Per-account survey rollup by wave. Source: survey_account_rollup.</description>
    <label>Survey Wave Result</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Wave Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>