force-app/main/default/objects/OCX_Survey_Wave_Result__c/fields/OCX_Account__c.field-meta.xml
<CustomField>
    <fullName>OCX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Wave Results</relationshipLabel>
    <relationshipName>OCX_Survey_Wave_Results</relationshipName>
    <type>Lookup</type>
</CustomField>