force-app/main/default/objects/OCX_Survey_Wave_Result__c/fields/OCX_Mean_LTR__c.field-meta.xml
<CustomField>
    <fullName>OCX_Mean_LTR__c</fullName>
    <label>Mean LTR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>