force-app/main/default/objects/OCX_Survey_Wave_Result__c/fields/OCX_NPS_Class__c.field-meta.xml
<CustomField>
    <fullName>OCX_NPS_Class__c</fullName>
    <label>NPS Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>