force-app/main/default/objects/OCX_Survey_Wave_Result__c/fields/OCX_Result_ID__c.field-meta.xml
<CustomField>
    <fullName>OCX_Result_ID__c</fullName>
    <description>&lt;OCX Account ID&gt;::&lt;wave&gt;.</description>
    <externalId>true</externalId>
    <label>OCX Result ID</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>