force-app/main/default/objects/OCX_Survey_Wave_Result__c/fields/OCX_Wave__c.field-meta.xml
<CustomField>
    <fullName>OCX_Wave__c</fullName>
    <label>Wave</label>
    <length>20</length>
    <type>Text</type>
</CustomField>